# FMiner

./: CMakeLists.txt  ExceptionalFactMining.cpp  ExceptionalFactMining.cpp.bak  ExceptionalFactMining.h  ExceptionalFactMining.h.bak  FMiner.cpp  FMiner.h  GraphManager.cpp  GraphManager.h  QueryInterface.cpp  QueryInterface.h  README.md  RandSim.cpp  RandSim.h  main.cpp  settings.h
